# babel-protocol

./: .gitignore  .replit  BACKEND.md  Dockerfile  TODO.md  database.yaml  go.mod  go.sum  implementation.md  main.go  pyproject.toml  replit.nix  schema.md  test.go  test2.go
backend/: .env  RESULTS.md  config.go  go.mod  go.sum  handlers.go  hedera.go  main.go  middleware.go  pyproject.toml  run.py  websocket.go
backend/algorithms/: __init__.py  base.py  collaborative_filtering.py  community_moderation.py  config.py  content_analysis.py  engagement_analytics.py  feedback_loop_optimization.py  interface.py  main.py  recommendation.py  requirements.txt  source_of_truth_consensus.py  temporal_considerations.py
backend/algorithms/models/: __init__.py
backend/algorithms/test/: test_flow.sh
backend/api/: api.go  auth.go  collaborative_filtering.go  community_moderation.go  content.go  content_analysis.go  engagement_analytics.go  feedback_loop_optimization.go  handlers.go  hashgraph_integration.go  models.go  notification.go  recommendation.go  source_of_truth_consensus.go  temporal_considerations.go  utils.go
backend/api/handlers/: handlers.go
backend/api/middleware/: middleware.go
backend/api/models/: models.go
backend/cmd/: main.go
backend/internal/cache/: cache.go
backend/internal/config/: config.go  rate_limit.go
backend/internal/content/: algorithm_client.go  manager.go
backend/internal/evidence/: manager.go
backend/internal/metrics/: metrics.go
backend/internal/middleware/: ratelimiter.go
backend/utils/: colors.go  logging.go  metrics.go
(+34 files in other folders)
