[tool.poetry]
name = "babel-algorithms"
version = "0.1.0"
description = "Babel Protocol Algorithm Implementation"
authors = ["Babel Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.24.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
nltk = "^3.9.1"
transformers = "^4.47.1"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 