[project]
name = "babel-algorithms"
version = "0.1.0"
description = "Babel Protocol Algorithm Implementation"
authors = [
    {name = "Babel Team"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy (==1.24.3)",
    "torch (==2.2.2)",
    "spacy (>=3.8.3,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
